<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swiperefresh_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical"
            tools:context=".OrderActivity">


            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar_main" />

            <TextView
                android:id="@+id/orderConfirmed"
                android:layout_width="292dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/lato"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/myOrder"
                android:textColor="@color/colorAccent"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/wallet"
                app:layout_constraintHorizontal_bias="0.096"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <TextView
                android:id="@+id/wallet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/roundedyellow"
                android:fontFamily="@font/lato"
                android:minWidth="50dp"
                android:padding="3dp"
                android:paddingStart="5dp"
                android:paddingEnd="5dp"
                android:text="TextView"
                android:textColor="@color/textColorLightBrown"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar" />

            <LinearLayout
                android:id="@+id/linearLayout8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="29dp"
                android:gravity="right"
                android:onClick="onChooseLoc"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/orderConfirmed">

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/deliveryLoc"
                    android:textColor="@color/textColorBrown"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/userAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/lato"
                    android:text="@string/refreshLoc"
                    android:textColor="@color/textColorLightBrown" />

                <TextView
                    android:id="@+id/noOrder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:foregroundGravity="center_vertical|center|center_horizontal"
                    android:gravity="center|center_horizontal|center_vertical"
                    android:onClick="onChooseLoc"
                    android:paddingTop="50dp" />
            </LinearLayout>

            <ImageView
                android:id="@+id/clearBtn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_trash"
                android:gravity="center"
                android:onClick="onDeleteItem"
                android:padding="10dp"
                android:text="🗑"
                app:layout_constraintStart_toEndOf="@+id/clearCart"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8"
                app:srcCompat="@drawable/icon_delete" />

            <ListView
                android:id="@+id/list_orders"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_margin="10dp"
                android:divider="@color/textColorYellow"
                android:dividerHeight="0dp"
                android:padding="5dp"
                android:paddingStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/clearBtn">

            </ListView>

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="411dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/borderView">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato"
                    android:gravity="end"
                    android:paddingEnd="10dp"
                    android:text="@string/total"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato"
                    android:gravity="end"
                    android:text="Rp"
                    android:textColor="@color/textColorBrown"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/lato"
                    android:paddingStart="10dp"
                    android:text="TextView"
                    android:textColor="@color/colorAccent"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <Button
                android:id="@+id/payBtn"
                android:layout_width="137dp"
                android:layout_height="58dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_gold"
                android:fontFamily="@font/lato"
                android:onClick="onConfirmPayment"
                android:paddingStart="20dp"
                android:text="@string/checkoutBtn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.817"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="1.0" />

            <Button
                android:id="@+id/topUpBtn"
                android:layout_width="137dp"
                android:layout_height="58dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/rounded_border_yellow"
                android:fontFamily="@font/lato"
                android:onClick="onClickTopUp"
                android:paddingEnd="25dp"
                android:text="@string/topupBtn"
                android:textAllCaps="false"
                android:textColor="@color/gold"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.193"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/borderView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/list_orders" />

            <TextView
                android:id="@+id/clearCart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="268dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/lato"
                android:text="Clear cart"
                android:textColor="#C34040"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout8" />
        </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
